	marshaling system. Change the signals template so that it import the
	System.Glib.Signals code rather than defining everything locally. Also
	parameterise by the module name so we can have more than a single
	global Signals module. The code dealing with the Sparc 4 word marshaling
	restriction has been dropped as it is no longer a problem.

2005-04-5 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/UTFString.hs: add some extra functions for
	marshaling lists and arrays of UTF-8 strings.

	* gtk/Graphics/UI/Gtk/Selectors/ColorButton.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FontButton.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileFilter.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/IconView.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/CellView.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/AboutDialog.chs,
	gtk/Graphics/UI/Gtk/Windows/WindowGroup.chs: add several new modules.
	This adds ~2.6 Kloc.

	* gtk/Graphics/UI/Gtk.hs: export the new modules.

	* Makefile.am: add the new modules to libHSgtk_a_SOURCES. Also add
	_stub.o files to libHSgtk_a_LIBADD.

	* tools/hierarchyGen/hierarchy.list: add new classes to hierarchy.

2005-04-4 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextMark.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextTag.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextTagTable.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextView.chs: merge from
	generated modules. Changed code formatting and documentation. In one
	or two places fix minor bugs. Remove two non-exsistant functions from
	TextView module.

2005-04-3 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Selectors/ColorSelection.chs,
	gtk/Graphics/UI/Gtk/Selectors/ColorSelectionDialog.chs,
	gtk/Graphics/UI/Gtk/Selectors/FileChooser.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserDialog.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserWidget.chs.pp,